--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="">
-    Hellow world
-  </div>
+  <form action="">
+    <label for="start_station">
+      <input type="text" id="start_station" name="start_station" placeholder="出発">
+    </label>
+    <label for="end_station">
+      <input type="text" id="end_station" name="end_station" placeholder="到着">
+    </label>
+    <input type="submit" value="送信">
+  </form>
 </body>
 </html>
