--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js" charset="utf-8"></script>
 </head>
 <body>
+  <script>
+    liff.init({
+      // 自分のLIFF ID（URLから『https://liff.line.me/』を除いた文字列）を入力する
+      liffId: "1655819346-pWjonr1K"
+      }).then(() => { // 初期化完了. 以降はLIFF SDKの各種メソッドを利用できる
+      document.querySelector("form").addEventListener("submit",function (e) {
+        e.preventDefault()
+        const startStation = e.target.value.start_station
+        const endStation = e.target.value.end_station
+        const sendValue = `${startStation},${endStation}`
+        liff.sendMessages([
+          {
+            type: 'text',
+            text: sendValue
+          }
+        ])
+          .then(() => {
+            console.log('OK');
+            liff.closeWindow();
+          })
+          .catch((err) => {
+            console.log('error', err);
+          });
+              })
+        })
+  </script>
   <form action="">
     <label for="start_station">
       <input type="text" id="start_station" name="start_station" placeholder="出発">
