--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,14 @@
       }).then(() => { // 初期化完了. 以降はLIFF SDKの各種メソッドを利用できる
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
-        const startStation = e.target.value.start_station
-        const endStation = e.target.value.end_station
-        const sendValue = `${startStation},${endStation}`
+        // const startStation = e.target.value.start_station
+        // const endStation = e.target.value.end_station
+        // const sendValue = `${startStation},${endStation}`
         liff.sendMessages([
           {
             type: 'text',
-            text: sendValue
+            // text: sendValue
+            text:"ffff"
           }
         ])
           .then(() => {
