--- a/templates/index.html
+++ b/templates/index.html
@@ -19,17 +19,17 @@
         // const startStation = e.target.value.start_station
         // const endStation = e.target.value.end_station
         // const sendValue = `${startStation},${endStation}`
-        // liff.sendMessages([
-        //   {
-        //     type: 'text',
-        //     // text: sendValue
-        //     text:"ffff"
-        //   }
-        // ])
-        //   .then(() => {
-        //     console.log('OK');
-        //     liff.closeWindow();
-        //   })
+        liff.sendMessages([
+          {
+            type: 'text',
+            // text: sendValue
+            text:"ffff"
+          }
+        ])
+          .then(() => {
+            console.log('OK');
+            liff.closeWindow();
+          })
         //   .catch((err) => {
         //     console.log('error', err);
         //   });
