--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
   <script>
