--- a/templates/index.html
+++ b/templates/index.html
@@ -17,23 +17,22 @@
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
         alert("test")
-        // const startStation = e.target.value.start_station
-        // const endStation = e.target.value.end_station
-        // const sendValue = `${startStation},${endStation}`
+        const startStation = e.target.value.start_station
+        const endStation = e.target.value.end_station
+        const sendValue = `${startStation},${endStation}`
         liff.sendMessages([
           {
             type: 'text',
-            // text: sendValue
-            text:"ffff"
+            text: sendValue
           }
         ])
           .then(() => {
             console.log('OK');
             liff.closeWindow();
           })
-        //   .catch((err) => {
-        //     console.log('error', err);
-        //   });
+          .catch((err) => {
+            console.log('error', err);
+          });
               })
         })
   </script>
