--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
         // alert("test")
-        alert(e.target.value)
+        alert(e.target)
         const startStation = e.target.value.start_station
         const endStation = e.target.value.end_station
         const sendValue = `${startStation},${endStation}`
