--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,15 @@
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
         // alert("test")
-        alert(e.target)
-        const startStation = e.target.value.start_station
-        const endStation = e.target.value.end_station
-        const sendValue = `${startStation},${endStation}`
+        // alert(e.target)
+        console.log(e.target);
+        // const startStation = e.target.value.start_station
+        // const endStation = e.target.value.end_station
+        // const sendValue = `${startStation},${endStation}`
         liff.sendMessages([
           {
             type: 'text',
-            text: sendValue
+            text:"test"
           }
         ])
           .then(() => {
