--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,13 @@
       }).then(() => { // 初期化完了. 以降はLIFF SDKの各種メソッドを利用できる
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
-        // alert("test")
-        // alert(e.target)
-        console.log(e.target);
-        // const startStation = e.target.value.start_station
-        // const endStation = e.target.value.end_station
-        // const sendValue = `${startStation},${endStation}`
+        const startStation=  document.querySelector("#start_station").value
+        const endStation  =  document.querySelector("#end_station").value
+        const sendValue = `${startStation},${endStation}`
         liff.sendMessages([
           {
             type: 'text',
-            text:"test"
+            text:sendValue
           }
         ])
           .then(() => {
