get train routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
     liff.init({
       // 自分のLIFF ID（URLから『https://liff.line.me/』を除いた文字列）を入力する
       liffId: "1655819346-pWjonr1K"
-      }).then(() => { // 初期化完了. 以降はLIFF SDKの各種メソッドを利用できる
+      }).then(() => {
+      // 初期化完了. 以降はLIFF SDKの各種メソッドを利用できる
       document.querySelector("form").addEventListener("submit",function (e) {
         e.preventDefault()
         const startStation=  document.querySelector("#start_station").value
