--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js" charset="utf-8"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+  <link  href="{{url_for('static', filename='train.png')}}">
 </head>
 <body>
   <script>
