get train routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>電車乗り換え案内</title>
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js" charset="utf-8"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-  <link  href="{{url_for('static', filename='train.png')}}">
+  <link rel="apple-touch-icon"  href="{{url_for('static', filename='train.png')}}">
 </head>
 <body>
   <script>
