--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <title>電車乗り換え案内</title>
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js" charset="utf-8"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-  <link rel="apple-touch-icon"  href="{{url_for('static', filename='train.png')}}">
+  <link rel="icon" href="{{ url_for('static', filename='train.png')}}">
 </head>
 <body>
   <script>
