--- a/templates/station_information.html
+++ b/templates/station_information.html
@@ -22,7 +22,7 @@
         liff.sendMessages([
           {
             type: 'text',
-            text:stationName
+            text:`駅情報,${stationName}`
           }
         ])
           .then(() => {
